--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,10 @@
 @import "matching/index";
 
 @import "chat_rooms/show";
+
+.footer {
+    background-color: black;
+    color: white;
+    width: 100%;
+    text-align: center;
+}
