--- a/app/assets/stylesheets/users/edit.scss
+++ b/app/assets/stylesheets/users/edit.scss
@@ -32,7 +32,7 @@
       padding: 8px 12px;
       font-size: 14px;
       color: #fff;
-      background-color: #FD3378;
+      background-color: #1e90ff;
       border-radius: 8px;
       cursor: pointer;
       &>input {
@@ -47,7 +47,7 @@
 }
 
 .user-edit__submit-btn {
-  background-color: #FD3378;
+  background-color: #1e90ff;
   height: 38px;
   margin-bottom: 24px;
 }
