--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -6,7 +6,7 @@
 
     <div class="chat-room__partner">
       <span class="chat-room__partner-name">
-        <%= @chat_room_user.name %>
+        <%= link_to @chat_room_user.name, user_path(@chat_room_user.id) %>
       </span>
 
       <% if @chat_room_user.profile_image.url.nil? %>
