--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
 <%= javascript_pack_tag 'profile_image_upload' %>
 
 
-<div class="user-edit-page">
-  <%= render "partial/navbar" %>
+<div class="user-edit-page", style="padding-top: 40px;">
+  
 
   <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), class: "px-3", local: true, method: :patch do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -40,4 +40,5 @@
     </div>
   <% end %>
 
+  <%= render "partial/navbar" %>
 </div>
