--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light">
  <%= link_to users_path, class: "nav-item nav-link", data: { turbolinks: :false } do %>
     <span class="<%= 'active' if current_page?(users_path) %>">
-      <i class="fas fa-fire fa-lg inherit"></i>
+      <i class="fas fa-hands-helping fa-lg inherit"></i>
     </span>
   <% end %>
   <%= link_to matching_index_path, class: "nav-item nav-link" do %>
