--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -10,7 +10,7 @@
 
   <div class="top-title">
     <h1 class="text-white text-center">
-      Swipe Right
+      Matching_App
     </h1>
   </div>
 
@@ -21,5 +21,9 @@
     <div class="top-authentication__sign-in-btn m-3">
       <%= link_to "ログイン", new_user_session_path, class: "btn text-white" %>
     </div>
+    <div class= "name">
+      <p>Created_by Yudai Suzuki</p>
+    </div>
   </div>
 </div>
+  
