--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="user-show-page">
 
-  <%= render "partial/navbar" %>
+  
 
   <div class="profile mt-4">
     <% if @user.profile_image.url.nil? %>
@@ -9,7 +9,11 @@
     <% else %>
       <%= image_tag @user.profile_image.url, class: "profile-img" %>
     <% end %>
-
+    
+    <div class="profile-email">
+      <%= @user.email %>
+    </div>
+    
     <div class="profile-name mt-4">
       <%= @user.name %>
     </div>
@@ -36,4 +40,5 @@
     </div>
   <% end %>
 
+  <%= render "partial/navbar" %>
 </div>
